force-app/main/default/objects/OpportunityLineItem/fields/ARC_Sage_LongDesc__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_LongDesc__c</fullName>
    <formula>PricebookEntry.Item_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Description</label>
    <type>Text</type>
</CustomField>