force-app/main/default/objects/OpportunityLineItem/fields/ICRM_Opportunity_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Opportunity_Product_ID__c</fullName>
    <label>Infor CRM Opportunity Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>