force-app/main/default/objects/OpportunityLineItem/fields/ICRM_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Product_ID__c</fullName>
    <label>Infor Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>