force-app/main/default/objects/OpportunityLineItem/fields/ItemKey__c.field-meta.xml
<CustomField>
    <fullName>ItemKey__c</fullName>
    <formula>PricebookEntry.ItemKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ItemKey</label>
    <type>Text</type>
</CustomField>