force-app/main/default/objects/OpportunityLineItem/fields/Kit_Components__c.field-meta.xml
<CustomField>
    <fullName>Kit_Components__c</fullName>
    <formula>HYPERLINK(&quot;https://sagetools.americanreading.com/bto-kit/&quot; &amp;  PricebookEntry.Product2.Name , &quot;Kit Components&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit Components</label>
    <type>Text</type>
</CustomField>