force-app/main/default/objects/OpportunityLineItem/fields/OP_Item_Heading__c.field-meta.xml
<CustomField>
    <fullName>OP_Item_Heading__c</fullName>
    <formula>PricebookEntry.ARC_Sage_Item_Heading_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Heading</label>
    <type>Text</type>
</CustomField>