force-app/main/default/objects/OpportunityLineItem/fields/Product_lookup__c.field-meta.xml
<CustomField>
    <fullName>Product_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Lookup</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>