force-app/main/default/objects/OpportunityLineItem/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>