force-app/main/default/objects/OpportunityLineItem/fields/Sandbox_Opportunity_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Opportunity_Product_ID__c</fullName>
    <label>Sandbox Opportunity Product ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>